# bayerfilter

parallel_code/: CMakeLists.txt  Makefile  demosaic.c  demosaic.h  kernel_fp16.cl  kernel_green.cl  kernel_green_fp16.cl  kernel_red_blue.cl  kernel_red_blue_fp16.cl  main.c
sequential_code/: CMakeLists.txt  Makefile  demosaic.c  demosaic.h  main.c  util.c  util.h
